--- a/.github/workflows/gcp_provision.yaml
+++ b/.github/workflows/gcp_provision.yaml
@@ -82,7 +82,7 @@ jobs:
         method: "POST"
         headers: '{"Content-Type":"application/json"}'
         body: '{"request_duration":"${{ inputs.DURATION }}","event_type":"sandbox-provision"}'
-        bearer-token: '${{ steps.auth.outputs.access_token }}'
+        bearer-token: 'Bearer ${{ steps.auth.outputs.access_token }}'
 
     # - name: "Invoke gcloud function"
     #   run: gcloud functions call gcp-sandbox-manager --data '{"request_duration":"${{ inputs.DURATION }}","event_type":"sandbox-provision"}' --region asia-south1 --project sandbox-master-prjc
