--- a/.github/workflows/gcp_provision.yaml
+++ b/.github/workflows/gcp_provision.yaml
@@ -60,7 +60,7 @@ jobs:
       run: gcloud projects list
 
     - name: "test prj sa"
-      run: gcloud functions list --project sandbox-master-prj
+      run: gcloud functions list --project sandbox-master-prjc
 
 
     # - name: Invoke function over HTTP
