updated cloud run module

--- a/cloudrun_src/Dockerfile
+++ b/cloudrun_src/Dockerfile
@@ -1,13 +1,9 @@
-FROM python:3.12
+FROM python:3.12.0
 
-WORKDIR /code
-
-COPY ./requirements.txt /code/requirements.txt
-
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
-
-COPY ./app /code/app
-
+COPY ./app /app
+COPY requirements.txt requirements.txt
+RUN pip install --upgrade pip
+RUN pip install --no-cache-dir --upgrade -r requirements.txt
 ENV PORT=8080
-
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", $PORT]
+# the --port $PORT is added here so that we can run this on Google Cloud Run
+CMD uvicorn app.main:app --host 0.0.0.0 --port $PORT
