--- a/cloudrun_src/Dockerfile
+++ b/cloudrun_src/Dockerfile
@@ -6,4 +6,4 @@ RUN pip install --upgrade pip
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
 ENV PORT=8080
-CMD uvicorn app.main:app --host 0.0.0.0 --port $PORT
+CMD uvicorn app.main:app --reload --host 0.0.0.0 --port $PORT
