updated cloud run module

--- a/config.yaml
+++ b/config.yaml
@@ -37,7 +37,7 @@ project:
     # - "secretmanager.googleapis.com"
     # - "eventarc.googleapis.com"
     # - "iamcredentials.googleapis.com"
-    # - "cloudresourcemanager.googleapis.com"
+    - "cloudresourcemanager.googleapis.com"
 
 service_account:
   account_id: "sandbox-master"
@@ -90,5 +90,5 @@ cloud_tasks:
 
 cloud_run:
   service_name: gcp-sandbox-provisioner
-  container_image: drtinkerer/gcp-sandbox-provisioner:1.0.0
+  container_image: drtinkerer/gcp-sandbox-provisioner:1.0.3
   swagger_docs_endpoint: /docs
