--- a/config.yaml
+++ b/config.yaml
@@ -78,6 +78,7 @@ iam_roles:
       - "iam.serviceAccounts.getOpenIdToken"
       - "iam.serviceAccounts.signBlob"
       - "iam.serviceAccounts.signJwt"
+      - "cloudbilling.googleapis.com"
       # - "artifactregistry.repositories.uploadArtifacts"
       # - "storage.managedFolders.get"
       # - "storage.managedFolders.list"
