updated run code

--- a/config.yaml
+++ b/config.yaml
@@ -28,6 +28,7 @@ project:
     # - "compute.googleapis.com"
     # - "cloudfunctions.googleapis.com"
     - "cloudtasks.googleapis.com"
+    - "cloudbilling.googleapis.com"
     # - "cloudbuild.googleapis.com"
     # - "pubsub.googleapis.com"
     # - "logging.googleapis.com"
@@ -78,7 +79,6 @@ iam_roles:
       - "iam.serviceAccounts.getOpenIdToken"
       - "iam.serviceAccounts.signBlob"
       - "iam.serviceAccounts.signJwt"
-      # - "cloudbilling.googleapis.com"
       # - "artifactregistry.repositories.uploadArtifacts"
       # - "storage.managedFolders.get"
       # - "storage.managedFolders.list"
