--- a/config.yaml
+++ b/config.yaml
@@ -68,6 +68,7 @@ iam_roles:
       # - "cloudfunctions.locations.list"
       # - "cloudfunctions.functions.list"
       # - "cloudfunctions.functions.invoke"
+      - "run.services.get"
       - "run.routes.invoke"
       - "cloudtasks.locations.list"
       - "cloudtasks.tasks.create"
@@ -91,5 +92,5 @@ cloud_tasks:
 
 cloud_run:
   service_name: gcp-sandbox-provisioner
-  container_image: drtinkerer/gcp-sandbox-provisioner:1.0.0
+  container_image: drtinkerer/gcp-sandbox-provisioner:1.0.1
   swagger_docs_endpoint: /docs
