--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,11 @@
 global:
-  github_repository: drtinkerer/gcp-sandbox
-  domain: "cloudpoet.in"
+  cloud_identity_domain: "cloudpoet.in"
   location: "asia-south1"
   billing_account_name: "CloudpoetMain"
   authorized_domains:
     - "cloudpoet.in"
     - "example.com"
   max_allowed_projects_per_user: 1
-
 
 folder:
   master_display_name: "Sanbox Provisioner"
@@ -21,78 +19,3 @@ folder:
     - "Team-Data"
     - "Team-3"
     - "Team-4"
-
-project:
-  master_display_name: "Sandbox Master"
-  prefix: "sandbox-master-project"
-  apis_to_enable:
-    # - "compute.googleapis.com"
-    # - "cloudfunctions.googleapis.com"
-    - "cloudtasks.googleapis.com"
-    - "cloudbilling.googleapis.com"
-    # - "cloudbuild.googleapis.com"
-    # - "pubsub.googleapis.com"
-    # - "logging.googleapis.com"
-    # - "storage-api.googleapis.com"
-    - "run.googleapis.com"
-    # - "artifactregistry.googleapis.com"
-    # - "secretmanager.googleapis.com"
-    # - "eventarc.googleapis.com"
-    # - "iamcredentials.googleapis.com"
-    - "cloudresourcemanager.googleapis.com"
-
-service_account:
-  account_id: "sandbox-master"
-  display_name: "Sandbox Master"
-
-iam_roles:
-  org_level_role:
-    title: "Sandbox Provisioner Organization Level Role"
-    role_id: "sandbox_provisioner_organization_level_role"
-    permissions:
-      - "resourcemanager.projects.create"
-      - "resourcemanager.organizations.get"
-      - "resourcemanager.projects.get"
-      - "resourcemanager.projects.list"
-      - "resourcemanager.folders.list"
-      - "resourcemanager.folders.get"
-      - "resourcemanager.projects.createBillingAssignment"
-      - "resourcemanager.projects.deleteBillingAssignment"
-      - "billing.resourceAssociations.create"
-      - "billing.resourceAssociations.delete"
-      - "billing.resourceAssociations.list"
-
-  project_level_role:
-    title: "Sandbox Provisioner Project Level Role"
-    role_id: "sandbox_provisioner_project_level_role"
-    permissions:
-      # - "cloudfunctions.functions.get"
-      # - "cloudfunctions.locations.list"
-      # - "cloudfunctions.functions.list"
-      # - "cloudfunctions.functions.invoke"
-      - "run.services.get"
-      - "run.routes.invoke"
-      - "cloudtasks.locations.list"
-      - "cloudtasks.tasks.create"
-      - "cloudtasks.tasks.delete"
-      - "iam.serviceAccounts.actAs"
-      - "iam.serviceAccounts.get"
-      - "iam.serviceAccounts.list"
-      - "iam.serviceAccounts.getAccessToken"
-      - "iam.serviceAccounts.getOpenIdToken"
-      - "iam.serviceAccounts.signBlob"
-      - "iam.serviceAccounts.signJwt"
-      # - "artifactregistry.repositories.uploadArtifacts"
-      # - "storage.managedFolders.get"
-      # - "storage.managedFolders.list"
-      # - "storage.objects.get"
-      # - "storage.objects.list"
-      # - "storage.objects.create"
-
-cloud_tasks:
-  queue_name: sandbox-project-deletion-tasks-queue
-
-cloud_run:
-  service_name: gcp-sandbox-provisioner
-  container_image: drtinkerer/gcp-sandbox-provisioner:1.0.0
-  swagger_docs_endpoint: /docs
